# multiproof

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
merkle_tree/: core.py  standart.py
merkle_tree/tests/: test_standart.py
multiproof/: __init__.py  bytes.py  core.py  standard.py  standart.py  utils.py
multiproof/tests/: test_standard.py  test_standart.py
src/: __init__.py  bytes.py  core.py  standart.py  utils.py
src/tests/: test_standart.py
