[tool.poetry]
name = "multiproof"
version = "0.1.1"
description = "A Python library to generate merkle trees and merkle proofs."
authors = ["StakeWise Labs <info@stakewise.io>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/stakewise/multiproof"
keywords = ["merkle-tree", "multiproof"]
packages = [
    { include = "multiproof" },
]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.0.0b7"
eth-abi = "^3.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
mypy = "^0.971"
isort = "^5.10.1"
pytest = "^7.1.2"
pre-commit = "^2.20.0"
Flake8-pyproject = "^1.1.0"

[tool.bandit]
exclude_dirs = ["*/tests/*", "src/config/networks.py"]

[tool.pylint."pre-commit-hook"]
disable=["C0103", "C0114", "C0115", "C0116", "R0801", "R0903", "W0703", "W1514"]

[tool.pylint."BASIC"]
good-names = ["db", "i", "el", "e", "w", "f", "w3"]

[tool.flake8]
max-line-length = 88
select = ["E121"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
